--- a/explore/config/params.yaml
+++ b/explore/config/params.yaml
@@ -1,11 +1,11 @@
 /**:
   ros__parameters:
-    robot_base_frame: base_link
+    robot_base_frame: odin1_base_link
     return_to_init: true
-    costmap_topic: map
-    costmap_updates_topic: map_updates
+    costmap_topic: /nvblox_node/static_occupancy_grid
+    costmap_updates_topic: /nvblox_node/static_occupancy_grid_updates
     visualize: true
-    planner_frequency: 0.15
+    planner_frequency: 0.33
     progress_timeout: 30.0
     potential_scale: 3.0
     orientation_scale: 0.0
