--- a/explore/config/params_costmap.yaml
+++ b/explore/config/params_costmap.yaml
@@ -1,6 +1,6 @@
 explore_node:
   ros__parameters:
-    robot_base_frame: base_link
+    robot_base_frame: odin1_base_link
     costmap_topic: /global_costmap/costmap
     costmap_updates_topic: /global_costmap/costmap_updates
     visualize: true
